--- a/rootdir/etc/init.mata.rc
+++ b/rootdir/etc/init.mata.rc
@@ -295,6 +295,7 @@ on post-fs-data
     write /sys/block/dm-0/queue/read_ahead_kb 2048
     write /sys/block/dm-1/queue/read_ahead_kb 2048
 
+    start vendor.ril-daemon
     start vendor.ipacm
     start vendor.qti
     start vendor.netmgrd
@@ -318,6 +319,9 @@ on post-fs-data
     chown system system /sys/class/kgsl/kgsl-3d0/devfreq/max_freq
     chown system system /sys/class/devfreq/soc:qcom,gpubw/min_freq
     chown system system /sys/devices/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/min_freq
+
+    # make it so that system can read /proc/cmdline
+    chmod 666 /proc/cmdline
 
 on early-boot
     # wait for devices
@@ -601,6 +605,7 @@ on property:vold.decrypt=trigger_restart_framework
     start vendor.qti
     start vendor.netmgrd
     start vendor.wcnss-service
+    start vendor.ril-daemon
 
 # Services begin here
 
